<resources>
    <string name="app_name">TimeManager</string>
    <string name="add_action">Add Action</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in_title">SIGN IN</string>
    <string name="login_hint_password">Enter Password</string>
    <string name="login_hint_email">Enter Email</string>
    <string name="log_in_but">Sign In</string>
    <string name="logo_image_description">logo_image</string>
    <string name="register_but">Sign Up</string>
    <string name="register_hint_password2">Confirm Password</string>
    <string name="register_title">Sign Up</string>
    <string name="register_hint_name">Name</string>
    <string name="register_hint_password">Password</string>
    <string name="register_hint_email">Email</string>
    <string name="login_forgot_pass_but">Forgot Password?</string>
    <string name="login_register_hint">Don\'t have an account yet?</string>
    <string name="login_sign_in_text">Sign Up</string>
    <string name="title_activity_2">Activity2</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_actions">Actions</string>
    <string name="new_action_toolbar">New Action</string>
</resources>