<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screen"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo_image_description"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/permanent_marker_regular"
        android:text="@string/log_in_title"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:layout_marginTop="144dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_mail_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:foregroundTint="#000000"
        android:hint="@string/login_hint_email"
        android:inputType="textEmailAddress"
        android:minHeight="40dp"
        android:selectAllOnFocus="true"
        android:textColorHighlight="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:layout_marginTop="112dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/login_hint_password"
        android:inputType="textPassword"
        android:minHeight="40dp"
        android:textColorHighlight="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:width="200dp"
        android:background="@drawable/custom_button"
        android:text="@string/log_in_but"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/butForgotPass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/custom_button"
        android:text="@string/login_forgot_pass_but"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignin" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butForgotPass">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_register_hint"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textSignUp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button2"
            android:text="@string/login_sign_in_text"
            android:textAllCaps="false"
            android:textColor="@color/holo_orange_dark"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>